sumo/tests/duarouter/errors/network/edge/lane/root__edge__lane#maxspeed__false11/errors.duarouter
Error: Attribute 'maxspeed' in definition of lane '1_0' is not a real number.
Quitting (on error).
